<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Groupon Go</string>
    <string name="api_platform_key">mnogfg32st543645</string>
    <string name="api_platform_salt">abcdefghijggpqr34</string>
    <string name="facebook_app_id">297513770408577</string>
    <string name="gcm_sender_id">608326587883</string>
    <string name="twitter_consumer_key">j9yy2mhOO6RgvfdGbAr0TWVsp</string>
    <string name="twitter_consumer_secret">styxh15BapgAsNCQleOtAvtR08asD3iqh7DxGoZa20EJryru0D</string>
    <string name="konotor_app_id">79986b52-5c00-48f0-bdb3-421a30906bf8</string>
    <string name="konotor_app_key">76ffbd96-c3ae-4d6b-a622-b956592a9cdd</string>
    <string name="mat_advertiser_id">23386</string>
    <string name="mat_conversion_key">8984996cded41d9b83786049284dd228</string>
    <string name="share_deal_link_scheme">http</string>
    <string name="share_deal_link_share_host">share.groupongo.in</string>
    <string name="share_deal_link_api_host">api.groupongo.in</string>
    <string name="share_deal_link_api_path">/index.html</string>
    <string name="font_museosans_100">fonts/exljbris-MuseoSans-100.otf</string>
    <string name="font_museosans_300">fonts/exljbris-MuseoSans-300.otf</string>
    <string name="font_museosans_500">fonts/exljbris-MuseoSans-500.otf</string>
    <string name="font_museosans_700">fonts/exljbris-MuseoSans-700.otf</string>
    <string name="font_undergrad_ultra">fonts/undergrad-ultrathin.ttf</string>
    <string name="font_avantgarde_md_bt_medium">fonts/avantgarde-md-bt-medium.ttf</string>
    <string name="prog_loading">Loading&#8230;</string>
    <string name="error_no_network">It seems your internet connection has gone out for a date.</string>
    <string name="error_invalid_response_from_server">Hmm&#8230; things are mysteriously slow today.\nHang in there, we’ve got Sherlock on the case.</string>
    <string name="error_request_timed_out">Our servers have taken a time out. Hang in there. They should be back in two wags of a dog’s tail.</string>
    <string name="error_no_connection_with_server">Our servers seem to be down. But not to worry, we’re doing our best to cheer them up.</string>
    <string name="error_generic_message">Sorry for the trouble. We will come back soon&#8230;</string>
    <string name="error_missing_play_services">Device should have Google Play Services to get push notifications for this application.</string>
    <string name="common_image_content_desc">Groupon Go</string>
    <string name="msg_vicinity_notification">You have %1$s unavailed deal(s) from %2$s and it’s just %3$s away from you. Now if only finding parking was as easy as finding deals.</string>
    <string name="msg_coupon_code_copied">Your coupon code is copied to clipboard.</string>
    <string name="category_name_all_deals">All Deals</string>
    <string name="what_kind_of_deals">What kind of deals</string>
    <string name="would_you_like">would you like to see?</string>
    <string name="msg_no_deals_found">No deals found.</string>
    <string name="msg_no_more_deals_found">No more deals found.</string>
    <string name="msg_deals_updated">Deals updated.</string>
    <string name="msg_more_deals_added">More deals added to list.</string>
    <string name="msg_enter_phone">Please enter your mobile number.</string>
    <string name="hint_phone_number">Your 10 digit Phone Number</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="register_dlg_title">Number Confirmation</string>
    <string name="register_dlg_footer">Is that correct?</string>
    <string name="button_edit">Edit</string>
    <string name="button_continue">Continue</string>
    <string name="dialog_location_is_off_title">Location is not enabled</string>
    <string name="dialog_gps_is_off_title">GPS is not enabled</string>
    <string name="dialog_location_is_off_content">Groupon Go would like to use your current location.</string>
    <string name="dialog_location_or_gps_is_off_footer">Knowing where you are can help us get you a great deal close by.</string>
    <string name="dialog_gps_is_off_content">Groupon Go would like to use your more accurate location.</string>
    <string name="button_not_now">Not now</string>
    <string name="button_settings">Settings</string>
    <string name="dialog_title_city_changed">City Changed</string>
    <string name="dialog_msg_city_changed">Your current city is %1$s. Tap here, if you want to explore deals there!</string>
    <string name="button_no_thanks">No Thanks</string>
    <string name="button_update_city">Update Deals</string>
    <string name="verfication_code_hint">Enter Verification Code</string>
    <string name="msg_enter_verif_code">We’ve just sent you a 6-digit activation code via SMS. Enter it here so we can let you in.</string>
    <string name="dlg_resend_code_title">Incorrect Code</string>
    <string name="dlg_resend_code_content">Oh no, the code doesn’t seem to be working.</string>
    <string name="dlg_resend_code_footer">Would you like us to resend it?</string>
    <string name="dlg_otp_expired_title">Activaton Code Expired</string>
    <string name="button_resend">Resend</string>
    <string name="button_cancel">Cancel</string>
    <string name="msg_checking_your_inbox">Checking your Inbox:&#160;</string>
    <string name="msg_otp_sms_not_detected">It seems you have not yet received the SMS. You can wait more or tap here, if you would like us to resend it.</string>
    <string name="msg_otp_sms_detected">Yay! Received the activation code. Now sending verifcation request for you.</string>
    <string name="hint_your_name">Your Name</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="hint_email">Enter your email</string>
    <string name="label_connect_with_fb">Connect with Facebook</string>
    <string name="label_connect_with_twitter">Connect with Twitter</string>
    <string name="connected_as">Connected as</string>
    <string name="label_stored_cards">Stored Cards</string>
    <string name="label_your_interests">Your Interests</string>
    <string name="label_share_the_app">Share the App</string>
    <string name="label_change_phn_num">Change Phone Number</string>
    <string name="error_invalid_email">Please enter a valid email.</string>
    <string name="dialog_msg_remove_profile_pic">Are you sure you want to remove the picture?</string>
    <string-array name="drawer_item">
        <item>Home</item>
        <item>My Purchases</item>
        <item>My Profile</item>
        <item>Share &amp; Earn</item>
        <item>Feedback</item>
        <item>About</item>
    </string-array>
    <string name="screen_header_my_purchases">My Purchases (%1$s)</string>
    <string name="screen_header_my_profile">My Profile</string>
    <string name="screen_header_share_and_earn">Share &amp; Earn</string>
    <string name="screen_header_feedback">Feedback</string>
    <string name="screen_header_about">About %1$s</string>
    <string name="label_my_promo_coupon">My Promotion Coupon</string>
    <string name="label_my_credits">My Credits</string>
    <string name="msg_my_credit_screen">Share the promo code %1$s with\nyour friends and they get an additional %2$s off\non their first %3$s deal. The best part,\nonce they buy a deal,\nyou get Go Credit worth \u20B9 %4$s too.</string>
    <string name="msg_instant_karma">Instant karma!</string>
    <string name="label_share_with">Share with</string>
    <string-array name="tab_title">
        <item>NEARBY</item>
        <item>BESTSELLING</item>
        <item>OUR PICKS</item>
    </string-array>
    <string name="msg_exploring_deals_in">Exploring Deals in&#160;</string>
    <string name="msg_count_deals_in">%1$s+ Deals in&#160;</string>
    <string name="msg_drag_down_categories">VIEW CATEGORIES</string>
    <string name="msg_drag_up_categories">TAP TO MINIMIZE</string>
    <string-array name="tab_titles_search_screen">
        <item>BY RATING</item>
        <item>BY LOCATION</item>
    </string-array>
    <string-array name="tab_titles_search_screen_temp">
        <item>SEARCH</item>
    </string-array>
    <string name="toast_no_search_results">Sorry, your search yielded no results.\nWe promise to fire somebody.\nCheck keyword for spelling.</string>
    <string name="screen_header_select_your_city">Select Your City</string>
    <string name="button_close">Close</string>
    <string name="label_current_location">Current Location</string>
    <string name="label_top_cities">Top Cities</string>
    <string name="msg_select_city">Please select your city.</string>
    <string name="label_bought">Bought</string>
    <string name="label_discount">Discount</string>
    <string name="label_per_person">Per Person</string>
    <string name="buy_now">BUY NOW</string>
    <string name="drag_up">DRAG UP TO READ MORE</string>
    <string name="highlight">Highlights</string>
    <string name="valid_upto">Valid upto</string>
    <string name="fine_print">Fine Print</string>
    <string name="total">Total</string>
    <string name="offer">Offer</string>
    <string name="label_sold_out">SOLD OUT</string>
    <string name="cost_for">Cost for</string>
    <string name="msg_redeem_help_1">Ensure you are at merchant location</string>
    <string name="msg_redeem_help_2">Tap AVAIL DEAL</string>
    <string name="msg_redeem_help_3">Show merchant the paperless coupon on your phone</string>
    <string name="msg_redeem_help_4">Coupon will not show up in the list, once you have availed the deal</string>
    <string name="pay_now">PAY NOW</string>
    <string name="grand_total">Grand Total</string>
    <string name="Rs">\u20B9</string>
    <string name="offer_detail">Offer Details</string>
    <string name="redeem_till">Avail till</string>
    <string name="on_min_purchase_of">&#160;on a min purchase of&#160;</string>
    <string name="label_avail_at">Avail at</string>
    <string name="label_applicable_on_at">Applicable on</string>
    <string name="button_save">SAVE</string>
    <string name="msg_offers_added_to_cart">Offers added to cart.</string>
    <string name="lbl_sold_out">Sold\nOut</string>
    <string name="dlg_msg_added_more_offer">We have revised your offer quantity as per availability</string>
    <string name="photo_option_take_new_photo">Take a new picture</string>
    <string name="msg_no_items_in_cart">No items in cart.</string>
    <string name="msg_unhappy_cart">Please go back and select the\n deals you want.\n(Or you are going to have one\nvery unhappy cart.)</string>
    <string name="msg_share_deal_via">Share this deal via</string>
    <string name="label_phonebook">Phonebook</string>
    <string name="label_facebook">Facebook</string>
    <string name="label_twitter">Twitter</string>
    <string name="label_more_options">More Options</string>
    <string name="label_cacnel">CANCEL</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="tag_oh_no">Uh-oh!</string>
    <string name="tag_payment_wrong">Something went wrong with your payment.</string>
    <string name="tag_like_to_try_again">Would you like to try this again?</string>
    <string name="msg_intro_stored_cards">Introducing Stored Cards</string>
    <string name="msg_just_save_your_card_details">Just save your card details for once and enjoy one-click payments</string>
    <string name="button_add_your_card">Add Your Card</string>
    <string name="title_your_stored_cards">Your Stored Cards</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="msg_enter_old_phone">Please enter your old phone number:</string>
    <string name="msg_enter_new_phone">Please enter your new phone number:</string>
    <string name="hint_old_phone_number">Your Old Phone Number</string>
    <string name="hint_new_phone_number">Your New Phone Number</string>
</resources>