<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:kellton="http://schemas.android.com/apk/res/com.groupon.go"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linear_transparent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:background="@null"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_share_options_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <View
            android:id="@+id/top_layout_divider"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/gradient_green_no_border_no_round" />

        <com.kelltontech.ui.widget.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/msg_share_deal_via"
            android:textColor="@color/cart_offer_amt"
            android:textSize="@dimen/splash_txv_17"
            kellton:customTypeFace="@string/font_museosans_500" />

        <include layout="@layout/product_detail_divider" />

        <com.kelltontech.ui.widget.CustomTextView
            android:id="@+id/txv_share_phonebook"
            style="@style/style_txv_share_option"
            android:drawableLeft="@drawable/ic_share_phonebook"
            android:text="@string/label_phonebook"
            kellton:customTypeFace="@string/font_museosans_500" />

        <include layout="@layout/product_detail_divider" />

        <com.kelltontech.ui.widget.CustomTextView
            android:id="@+id/txv_share_facebook"
            style="@style/style_txv_share_option"
            android:drawableLeft="@drawable/ic_share_facebook"
            android:text="@string/label_facebook"
            kellton:customTypeFace="@string/font_museosans_500" />

        <include layout="@layout/product_detail_divider" />

        <com.kelltontech.ui.widget.CustomTextView
            android:id="@+id/txv_share_twitter"
            style="@style/style_txv_share_option"
            android:drawableLeft="@drawable/ic_share_twitter"
            android:text="@string/label_twitter"
            kellton:customTypeFace="@string/font_museosans_500" />

        <include layout="@layout/product_detail_divider" />

        <com.kelltontech.ui.widget.CustomTextView
            android:id="@+id/txv_share_more_options"
            style="@style/style_txv_share_option"
            android:drawableLeft="@drawable/ic_share_mail"
            android:text="@string/label_more_options"
            kellton:customTypeFace="@string/font_museosans_500" />

        <include layout="@layout/product_detail_divider" />

        <com.kelltontech.ui.widget.CustomTextView
            android:id="@+id/txv_share_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/common_grey_3"
            android:gravity="center"
            android:text="@string/label_cacnel"
            android:textColor="@color/common_grey_1"
            android:textSize="@dimen/splash_txv_17"
            kellton:customTypeFace="@string/font_museosans_500" />
    </LinearLayout>

</LinearLayout>