<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:kellton="http://schemas.android.com/apk/res/com.groupon.go"
    style="@style/root_fragment_layout"
    android:background="@drawable/gradient_green_no_border_no_round" >

    <LinearLayout
        style="@style/root_fragment_layout"
        android:layout_above="@+id/txv_done"
        android:orientation="vertical"
        android:padding="8dp" >

        <com.kelltontech.ui.widget.CustomTextView
            style="@style/splash_txv_style"
            android:layout_marginTop="40dp"
            android:text="@string/what_kind_of_deals"
            android:textColor="@color/common_white_like_text_color"
            android:textSize="@dimen/splash_txv_24"
            kellton:customTypeFace="@string/font_museosans_300" />

        <com.kelltontech.ui.widget.CustomTextView
            style="@style/splash_txv_style"
            android:text="@string/would_you_like"
            android:textColor="@color/common_white_like_text_color"
            android:textSize="@dimen/splash_txv_24"
            kellton:customTypeFace="@string/font_museosans_300" />

        <GridView
            android:id="@+id/grid_prefs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="35dp"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:horizontalSpacing="10dp"
            android:listSelector="#00000000"
            android:numColumns="3"
            android:padding="7dp"
            android:stretchMode="columnWidth"
            android:verticalSpacing="10dp" >
        </GridView>
    </LinearLayout>

    <com.kelltontech.ui.widget.CustomTextView
        android:id="@id/txv_done"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="DONE"
        android:textColor="#71B368"
        kellton:customTypeFace="@string/font_museosans_500" />

</RelativeLayout>