<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:kellton="http://schemas.android.com/apk/res/com.groupon.go"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingTop="?attr/actionBarSize" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <com.kelltontech.ui.widget.CustomTextView
            android:id="@+id/txv_stored_cards_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/title_your_stored_cards"
            android:textColor="@color/cart_offer_amt"
            android:textSize="@dimen/splash_txv_17"
            kellton:customTypeFace="@string/font_museosans_500" />

        <LinearLayout
            android:id="@+id/linear_stored_cards_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_no_stored_cards_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:visibility="gone" >

            <com.kelltontech.ui.widget.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/msg_intro_stored_cards"
                android:textColor="@color/cart_offer_amt"
                android:textSize="@dimen/splash_txv_17"
                kellton:customTypeFace="@string/font_museosans_500" />

            <com.kelltontech.ui.widget.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/msg_just_save_your_card_details"
                android:textColor="@color/common_grey_2"
                android:textSize="@dimen/splash_txv_12"
                kellton:customTypeFace="@string/font_museosans_500" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/common_divider_color" />

        <com.kelltontech.ui.widget.CustomTextView
            android:id="@+id/txv_btn_add_your_card"
            style="@style/style_txv_share_option"
            android:background="@color/common_grey_3"
            android:drawableLeft="@drawable/ic_stored_cards"
            android:text="@string/button_add_your_card"
            kellton:customTypeFace="@string/font_museosans_500" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/common_divider_color" />
    </LinearLayout>

</ScrollView>