<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:kellton="http://schemas.android.com/apk/res/com.groupon.go"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@null" >

    <ImageView
        android:id="@+id/img_header_cancel_btn"
        android:layout_width="52dp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/common_image_content_desc"
        android:padding="12dp"
        android:src="@drawable/ic_cross_white" />

    <ImageView
        android:id="@+id/img_header_done_btn"
        android:layout_width="52dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/common_image_content_desc"
        android:padding="12dp"
        android:src="@drawable/ic_nav_check" />

    <com.kelltontech.ui.widget.CustomTextView
        android:id="@+id/txv_header_in_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="5dp"
        android:layout_toLeftOf="@+id/img_header_done_btn"
        android:layout_toRightOf="@+id/img_header_cancel_btn"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/screen_header_my_profile"
        android:textColor="@color/common_white_like_text_color"
        android:textSize="@dimen/common_header_text_size"
        kellton:customTypeFace="@string/font_museosans_500" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:background="#4DEFEEEC" />

</RelativeLayout>